#
# Copyright 2008, 2009 Dominic Spill, Michael Ossmann                                                                                      
# Copyright 2007 Dominic Spill                                                                                                             
# Copyright 2005, 2006 Free Software Foundation, Inc.
# 
# This file is part of gr-bluetooth
# 
# gr-bluetooth is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# gr-bluetooth is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with gr-bluetooth; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.
# 

include $(top_srcdir)/Makefile.common

EXTRA_DIST = configure config.h.in config.guess config.sub depcomp py-compile
SUBDIRS = config src
DIST_SUBDIRS = config src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA =
